[package]
name = "yrs-axum"
version = "0.1.0"
edition = "2021"
description = "Yrs synchronization protocol using Axum Websockets"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "warp"]
homepage = "https://github.com/mikotoIO/yrs-axum/"
repository = "https://github.com/mikotoIO/yrs-axum/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = "0.18.2"
axum = { version = "0.7.5", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.36", features = ["rt", "net", "sync", "macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
bytes = "1.6"
warp = "0.3"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
